# ICT-Camp_Project

./: .gitignore  README.md  gametest.html  gametest.js  peli.js  peli.py  pyproject.toml  sivu.html  test.py
.github/workflows/: azure-static-web-apps-delightful-forest-0ea310303.yml  azure-static-web-apps-icy-forest-0ba33450f.yml  azure-static-web-apps-thankful-smoke-0d8e1980f.yml  azure-static-web-apps-victorious-wave-0fa2d1d0f.yml
Resources/: environment.yaml  locators.yaml
Resources/Environment/: genres.yaml  locators.yaml  strategies.yaml  variables.yaml
Resources/Keywords/: user_keywords.resource
Robot_tests/: .gitignore  README.md  pyproject.toml
Tests/: template.robot  test_genrefilters.robot  test_pagelinks.robot  test_pdgame.robot  test_singlefilter.robot
Tests/Logs/: log.html  output.xml  report.html
pelisivu/: .gitignore  index.css  index.html  index.js  peli.css  peli.js  peli2.css  peli2.js  peliOLD.css  peliOLD.js  sivu.html  sivu2.html  sivuOLD.html
pelisivu/About Us/: index.css  index.html
pelisivu/Account/: index.css  index.html
pelisivu/Login&SignUp/: index.css  index.html
pelisivu/Support/: app.js  faq.html  index.css  index.html
pelisivu/about_us/: index.css  index.html
pelisivu/account/: index.html  profile_information.html
pelisivu/images/: background1.avif
pelisivu/login_sign_up/: index.css  index.html  index.js
pelisivu/prisoners_dilemma/: peli.css  peli.js  sivu.html
pelisivu/support/: app.js  faq.html  index.html  script.js
robot_tests/: .gitignore
robot_tests/Tests/: test_genrefilters.robot
(+7 files in other folders)
