[tool.poetry]
name = "ict-camp-project-tests"
version = "0.1.0"
description = ""
authors = ["Anne Salminen <amauran@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
